--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   </head>
   <body>
     <main>
-      <input type="number" value="0" />
+      <input type="number" value="1" default="0" class="input_number" />
       <div class="key">
-        <button class="op_key" op="clear">C</button>
+        <button class="op_key clear" op="clear">C</button>
         <button class="op_key" op="additive">+/-</button>
         <button class="op_key" op="perc">%</button>
         <button class="op_key" op="division">/</button>
-        <button class="num_key" op="division">7</button>
-        <button class="num_key" op="division">8</button>
-        <button class="num_key" op="division">9</button>
+        <button class="num_key">7</button>
+        <button class="num_key">8</button>
+        <button class="num_key">9</button>
         <button class="op_key" op="multi">x</button>
-        <button class="num_key" op="division">4</button>
-        <button class="num_key" op="division">5</button>
-        <button class="num_key" op="division">6</button>
+        <button class="num_key">4</button>
+        <button class="num_key">5</button>
+        <button class="num_key">6</button>
         <button class="op_key" op="sub">-</button>
-        <button class="num_key" op="division">1</button>
-        <button class="num_key" op="division">2</button>
-        <button class="num_key" op="division">3</button>
+        <button class="num_key">1</button>
+        <button class="num_key">2</button>
+        <button class="num_key">3</button>
         <button class="op_key" op="add">+</button>
         <span></span>
         <button class="num_key" op="division">0</button>
