--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       <div class="key">
         <button class="op_key clear" op="clear">C</button>
         <button class="op_key additive" op="additive">+/-</button>
-        <button class="op_key" op="perc">%</button>
-        <button class="op_key" op="division">/</button>
-        <button class="num_key">7</button>
-        <button class="num_key">8</button>
-        <button class="num_key">9</button>
-        <button class="op_key" op="multi">x</button>
-        <button class="num_key">4</button>
-        <button class="num_key">5</button>
-        <button class="num_key">6</button>
-        <button class="op_key" op="sub">-</button>
-        <button accesskey="1" class="num_key">1</button>
-        <button class="num_key">2</button>
-        <button class="num_key">3</button>
-        <button class="op_key" op="add">+</button>
+        <button class="op_key percentage" op="perc">%</button>
+        <button class="op_key divide" op="division">/</button>
+        <button class="num_key btn7">7</button>
+        <button class="num_key btn8">8</button>
+        <button class="num_key btn9">9</button>
+        <button class="op_key multiply" op="multi">x</button>
+        <button class="num_key btn4">4</button>
+        <button class="num_key btn5">5</button>
+        <button class="num_key btn6">6</button>
+        <button class="op_key subtract" op="sub">-</button>
+        <button class="num_key btn1">1</button>
+        <button class="num_key btn2">2</button>
+        <button class="num_key btn3">3</button>
+        <button class="op_key add" op="add">+</button>
         <span></span>
-        <button class="num_key">0</button>
+        <button class="num_key btn0">0</button>
         <button class="num_key dot" op="dot">.</button>
         <button class="eq_key">=</button>
       </div>
