Created media query for lower res mobile displays and added the correct division symbol

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="op_key clear" op="clear">C</button>
         <button class="op_key additive" op="additive">+/-</button>
         <button class="op_key percentage" op="perc">%</button>
-        <button class="op_key divide" op="division">/</button>
+        <button class="op_key divide" op="division">÷</button>
         <button class="num_key btn7">7</button>
         <button class="num_key btn8">8</button>
         <button class="num_key btn9">9</button>
